# rivertopo

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml
rivertopo/: burn_line_z.py  burning.py  cross_lines.py  cross_lines_z.py  cross_lines_z_2.py  parameterization.py  profile.py  profile_extraction.py  profile_plotting.py  profile_plotting_v2.py  sample_points.py  snapping.py  topology.py
tests/: conftest.py  test_burning.py  test_cli.py  test_profile.py  test_snapping.py  test_topology.py
tests/data/: after_burn_ex.npz  cropped_vandloebsmidte.gpkg  fiskbaek.npz  indbrændings_eksempel.csv  indbrændt.csv  karup.csv  karup.npz  pre_burn_ex.npz  skive.npz  test_sammensat.gpkg  test_simpel.gpkg
