[project]
name = "rivertopo"
version = "0.1.0"
authors = [
    {name = "Danish Agency for Data Supply and Infrastructure (SDFI)", email = "sdfi@sdfi.dk"},
]
description = "Tools to help combine river profile data and DEMs"
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
cross_lines_z = "rivertopo.cross_lines_z:main"
profile_extraction = "rivertopo.profile_extraction:main"
